--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,23 @@
+* {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 .txt {
   text-transform: capitalize;
 }
 
 #current-search, #current-date {
   display: inline;
+  margin: 5px;
+}
+
+.city-input {
+  font-size: 25px;
+  margin-bottom: 5px;
+}
+
+.btn-txt {
+  background-color: rgb(108, 152, 167);
+  color: white;
 }
 
 .future-days{
@@ -12,7 +26,7 @@
 }
   
 .future-days div{
-  margin: 3px;
+  margin: 4px;
 }
   
 .card{
@@ -25,24 +39,10 @@
   font-size: 16px;
   font-weight: bold;
 }
-  
-.past-search span{
-  cursor: pointer;
-}
 
-.past-search span.active{
-  background-color: #007bff !important;
-  color: white;
-  border-radius: 5px;
-}
-  
 .future-days .card {
-  background-color: #33475A;
+  background-color: rgb(108, 152, 167);
   color: white;
-}
-  
-.past-search .span{
-  background-color: black!important;
 }
   
 .current-search{
@@ -57,6 +57,6 @@
   display: inline;
 }
   
-  /* .current-forecast img{
+.current-forecast img{
     display: inline;
-  } */
+  } 
